fixed div overflow problem for info/date divs

--- a/public/css/linkedin.css
+++ b/public/css/linkedin.css
@@ -54,10 +54,16 @@ ul {
 #timeline .info {
   position: relative;
 }
-#timeline .info span,
+.infoBlock {
+  opacity: 0;
+  position: absolute;
+  white-space: nowrap;
+}
+.infoBlock,
 #timeline .date span {
   background-color: #222;
   padding-left: 2px;
+  white-space: nowrap;
 }
 #timeline .info span.compName {
   font-weight: bold;
